# bsvdb

./: .gitignore  Cargo.toml  README.md  bsvdb_full.toml
.github/workflows/: tests.yml
base/: Cargo.toml
base/src/: config.rs  lib.rs  result.rs
blockarchive/: Cargo.toml
blockarchive/src/: block_archive.rs  lib.rs  result.rs  sfb_archive.rs
chainstore/: Cargo.toml
chainstore/benches/: get_block_info.rs
chainstore/src/: chain_store.rs  fdb_chain_store.rs  lib.rs  result.rs
chainstore/tests/: fdb_tests.rs
cli/: Cargo.toml
cli/src/: ba.rs  chk_links.rs  cli.rs  cs.rs  global.rs  result.rs
cmds/: Cargo.toml
cmds/src/: blockarchive.rs  cli.rs
docs/: blockarchive.md  dev-parallel-dbs.md
examples/: Cargo.toml
examples/src/: getblock.rs  lsblocks.rs
