[package]
name = "bsvdb-blockarchive"
version = "0.1.0"
edition = "2021"
authors = [
    "Daniel Connolly <daniel@dconnolly.com>"
]
license-file = "LICENSE"
homepage = "https://github.com/Danconnolly/bsvdb/"
repository = "https://github.com/Danconnolly/bsvdb/"
description = "A block archive for Bitcoin SV"
keywords = ["bitcoin-sv"]
readme = "../README.md"

[dependencies]
tokio = { version = ">=1.23.1", features = ["full"] }
async-trait = "0.1.75"
tokio-stream = { version = "0.1", features = ["full"] }
futures = "0.3.30"
hex = "0.4.3"
log = "0.4.20"

bitcoinsv = "0.2.5"
bsvdb-base = { path = "../base" }

[dev-dependencies]
tempfile = "3.10.1"
