[package]
name = "bsvdb-chainstore"
version = "0.1.0"
edition = "2021"
authors = [
    "Daniel Connolly <daniel@dconnolly.com>"
]
license-file = "LICENSE"
homepage = "https://github.com/Danconnolly/bsv-chainstore/"
repository = "https://github.com/Danconnolly/bsv-chainstore/"
description = "A chain store for Bitcoin SV"
keywords = ["bitcoin-sv"]
readme = "../README.md"

[dependencies]
tokio = { version = ">=1.23.1", features = ["full"] }
async-trait = "0.1.75"
tokio-stream = { version = "0.1", features = ["full"] }
futures = "0.3.30"
foundationdb = { version = "0.9.0", features = ["fdb-7_1"] }
hex = "0.4.3"
log = "0.4.20"
rand = "0.8.5"

bitcoinsv = "0.2.6"
bsvdb-base = { path = "../base" }