[package]
name = "bsvdb-chainstore"
version = "0.1.0"
edition = "2021"
authors = [
    "Daniel Connolly <daniel@dconnolly.com>"
]
license-file = "LICENSE"
homepage = "https://github.com/Danconnolly/bsv-chainstore/"
repository = "https://github.com/Danconnolly/bsv-chainstore/"
description = "A chain store for Bitcoin SV"
keywords = ["bitcoin-sv"]
readme = "../README.md"

[dependencies]
async-trait = "0.1.75"
bitcoinsv = "0.2.7"
foundationdb = { version = "0.9.0", features = ["fdb-7_1"] }
futures = "0.3.30"
hex = "0.4.3"
log = "0.4.20"
minactor = "0.3.0"
rand = "0.8.5"
tokio = { version = ">=1.23.1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["full"] }

bsvdb-base = { path = "../base" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "get_block_info"
harness = false
