[package]
name = "blockarchive-cmds"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Connolly <daniel@dconnolly.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.75"
tokio-stream = { version = "0.1", features = ["full"] }
futures = "0.3.30"
env_logger = "0.10.1"
clap = {  version = "4.5.2", features = ["derive", "env"]}
log = "0.4.21"
url = "2.5.0"
bitcoinsv = "0.2.5"
bitcoinsv-rpc = "1.0.0"

bsvdb-blockarchive = { path = "../blockarchive" }
bsvdb-base = { path = "../base" }


[[bin]]
name = "bsvdb-cli"
path = "src/cli.rs"


