[package]
name = "blockarchive-examples"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Connolly <daniel@dconnolly.com>"]

[dependencies]
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.75"
tokio-stream = { version = "0.1", features = ["full"] }
futures = "0.3.30"
env_logger = "0.10.1"
clap = {  version = "4.5.2", features = ["derive"]}
log = "0.4.21"

bitcoinsv = "0.2.5"
bsv-blockarchive = { path = "../blockarchive" }

[[bin]]
name = "lsblocks"
path = "src/lsblocks.rs"

[[bin]]
name = "getblock"
path = "src/getblock.rs"


